fix: [UIP-5336] Safari: autocomplete native icon overlaps with Reveal eye-shape button

--- a/packages/end-user/src/css/components/_text-input.scss
+++ b/packages/end-user/src/css/components/_text-input.scss
@@ -17,6 +17,8 @@
   @extend %input-text;
   @extend %input-box;
 
+  padding-right: 40px;
+
   margin: 0px;
 
   &::placeholder {
